Make sure to apply these changes per revision, in reverse order! Otherwise, you
may corrupt your database. Revert back to the specified revision if necessary.

-------------------------------------------------------------------------------
Changed in revision 37:

The changes in revision 35 were not applied correctly. You must first sync the
database to make sure the new enabled_services table is created and then you
need to specify default services and only after that the
install_default_services code will actually do something. But then, when you
manually select default services, they are already installed. So:

./manage syncdb

Select default services using the administration panel.

-------------------------------------------------------------------------------
Changed in revision 35:

Reordered pc monitor services. Nice feature: a default set of services will be
installed whenever a new non-admin pc is added.

./manage dbshell:
mysql> alter table inforecords_monitorservice add column is_default_service
bool not null;
mysql> drop table inforecords_pcmonitorservice;
mysql> alter table inforecords_organization drop column contact_id;
mysql> alter table inforecords_location drop column contact_id;

./manage shell:
In [1]: from inforecords.models import *

In [2]: for pc in Pc.objects.all():
   ...:     pc.install_default_services()
   ...:     
   ...:     


-------------------------------------------------------------------------------
Changed in revision 34:

Removed country field from the Location model. We already specify a cluster,
so country is not needed.

./manage dbshell:
mysql> alter table inforecords_location drop column country;


-------------------------------------------------------------------------------
Changed in revision 30.1.2:

Make sure to apply these changes ONLY AFTER you have applied the changes from
revision 31.1. Otherwise, you will lose all stored station passwords.

Dropped upload codes and passwords from the DetectorHisparc model.
